# catalog

./: AGENTS.md  CLAUDE.md  Cargo.toml  LICENCE  README.md
.claude/: settings.local.json
.github/workflows/: release.yml  rust.yml
scope/: acceptance.md  cli-spec.md  config-spec.md  eng-guidelines.md  indexing-rules.md  ops.md  packaging.md  performance.md  prd-001.md  schema.md  storage-analysis.md  testing.md
src/: analyze.rs  analyze_tui.rs  cli.rs  config.rs  db.rs  indexer.rs  lib.rs  main.rs  output.rs  roots.rs  search.rs  store.rs  tags.rs  util.rs
